- fix for use of Java 1.5 methods (eclipse is crap) - added two more test-cases for blacklist cleaner
git-svn-id: https://svn.berlios.de/svnroot/repos/yacy/trunk@3288 6c8d7289-2bf4-0310-a012-ef5d649a1542